--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,10 @@
 @import url("../vendor/normalize.css");
 @import url("../blocks/page/page.css");
 @import url("../blocks/header/header.css");
+@import url("../blocks/profile/profile.css");
+@import url("../blocks/profile/info/info.css");
+@import url("../blocks/section-width/section-width.css");
+@import url("../blocks/elements/elements.css");
 
 
 * {
