--- a/blocks/elements/element/element.css
+++ b/blocks/elements/element/element.css
@@ -7,3 +7,12 @@
     box-sizing: border-box;
   
 }
+
+@media screen and (max-width: 600px) {
+
+    .element {
+        max-width: 282px;
+        margin: 0 auto;
+    }
+
+}
