code javascript and move button

--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,10 +1,12 @@
 @import url("./avatar/avatar.css");
+@import url("./__section/profile__section.css");
 
 
 .profile {
     font-family: 'Inter', Arial, sans-serif;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     align-items: center;
     margin: 0 auto;
     margin-bottom: 58px;
