--- a/blocks/form/__container/form__container.css
+++ b/blocks/form/__container/form__container.css
@@ -1,12 +1,16 @@
 .form__container {
+    font-family: 'Inter', Arial, sans-serif;
     display: flex;
     flex-direction: column;
     width: 430px;
     height: 330px;
     background-color: white;
     position: fixed;
-    margin-left: calc(50% - 215px);
+    right: calc(50% - 215px);
     top: 195px;
     color: black;
     border-radius: 10px;
+    opacity: 1;
+    z-index: 2;
+
 }
