--- a/blocks/profile/__section/profile__section.css
+++ b/blocks/profile/__section/profile__section.css
@@ -2,3 +2,9 @@
     display: flex;
     align-items: center;
 }
+
+@media screen and (max-width: 800px) {
+    .profile__section {
+        flex-direction: column;
+    }
+}
