--- a/blocks/profile/info/__description/info__description.css
+++ b/blocks/profile/info/__description/info__description.css
@@ -1,4 +1,21 @@
 .info__description {
     margin-top: 0;
     margin-bottom: 0;
+    font-family: Inter;
+font-style: normal;
+font-weight: normal;
+font-size: 18px;
+line-height: 22px;
+}
+
+
+@media screen and (max-width: 900px) {
+    .info__description {
+        font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    margin-bottom: 53px;
+    }
 }
