--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -20,12 +20,14 @@
     
 .profile {   
     width: calc(100% - 198px);
+    flex-direction: column;
 }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
     
     .profile {   
         width: calc(100% - 38px);
+        
     }
     }
