--- a/blocks/section-width/section-width.css
+++ b/blocks/section-width/section-width.css
@@ -7,6 +7,12 @@
 }
 
 
+@media screen and (max-width: 1150px) {
+    .section-width {
+        width: calc(100% - 80px);
+    }
+}
+
 
 @media screen and (max-width: 600px) {
     .section-width {
