--- a/blocks/form/__container/form__container.css
+++ b/blocks/form/__container/form__container.css
@@ -1,5 +1,5 @@
 .form__container {
-    font-family: 'Inter', Arial, sans-serif;
+    font-family: 'Inter', "Arial", sans-serif;
     display: flex;
     flex-direction: column;
     width: 430px;
