--- a/blocks/form/__overlay/form__overlay.css
+++ b/blocks/form/__overlay/form__overlay.css
@@ -4,7 +4,7 @@
     height: 100vh;
     z-index: 1; 
     background-color:black;
-    opacity: 0.5; 
+    opacity: .5; 
     top: 0; 
     left: 0; 
     display: flex; 
