--- a/blocks/form/__title/form__title.css
+++ b/blocks/form/__title/form__title.css
@@ -1,7 +1,7 @@
 .form__title {
     margin-top: 34px;
     margin-left: 36px;
-    margin-bottom: 0px;
+    margin-bottom: 0;
     font-weight: 900;
     font-size: 24px;
     line-height: 29px;
