--- a/blocks/header/__vector/header__vector.css
+++ b/blocks/header/__vector/header__vector.css
@@ -2,5 +2,13 @@
     width: 177px;
     height: 33px;
     align-self: left;
-    margin: 0 0 41px 0;
+}
+
+@media screen and (max-width: 700px) {
+
+    .header__vector{
+        width: 126px;
+        height: 24px;
+    }
+
 }
