--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,10 +1,10 @@
 .page {
-    font-family: 'Inter', Arial, sans-serif;
+    font-family: 'Inter', 'Arial', sans-serif;
     display: flex;
     flex-direction: column;
     margin: 0 auto;
     justify-content: center;
-    background-color: #2A2C2F;
+    background-color:#000000;
     color: white;
     max-width: 1280px;
     width: 100%;
