--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -1,21 +1,22 @@
-.info__description {
-    margin-top: 0;
+.profile__description {
+    grid-area: description;
+    margin-top: 16px;
     margin-bottom: 0;
-    font-family: Inter;
+    font-family: 'Inter', "Arial", sans-serif;
 font-style: normal;
 font-weight: normal;
 font-size: 18px;
 line-height: 22px;
 }
 
-
-@media screen and (max-width: 900px) {
-    .info__description {
+@media screen and (max-width: 600px) {
+    .profile__description {
         font-style: normal;
     font-weight: normal;
     font-size: 14px;
     line-height: 17px;
     text-align: center;
     margin-bottom: 53px;
+    margin-top: 14px;
     }
 }
