--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -10,7 +10,7 @@
     background-position: center;
 }
 
-@media screen and (max-width: 900x){
+@media screen and (max-width: 900px){
     .profile__add-button{
         margin-right: 18px; 
     }
