--- a/blocks/elements/__element/elements__element.css
+++ b/blocks/elements/__element/elements__element.css
@@ -2,7 +2,7 @@
     background-color: white;
     border-radius: 10px;
     object-fit: contain;
-    max-width: 100%;
+    width: 282px;
     color: black;
     box-sizing: border-box;
   
