--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -3,6 +3,8 @@
 @import url("./__bar/elements__bar.css");
 @import url("./__name/elements__name.css");
 @import url("./__heart-icon/elements__heart-icon.css");
+@import url("./__trash-icon/elements__trash-icon.css");
+@import url("./__template/elements__template.css");
 
 
 .elements {
