code like button

--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -5,6 +5,7 @@
 @import url("./__heart-icon/elements__heart-icon.css");
 @import url("./__trash-icon/elements__trash-icon.css");
 @import url("./__template/elements__template.css");
+@import url("./__heart-icon_theme_dark/elements__heart-icon_theme_dark.css");
 
 
 .elements {
