--- a/blocks/form/__container/_type_image/form__container_type_image.css
+++ b/blocks/form/__container/_type_image/form__container_type_image.css
@@ -1,5 +1,14 @@
 .form__container_type_image {
   border-radius: 0;
+  object-fit: contain;
+  background-color: transparent;
+  width: auto;
+  height: auto;
   max-width: 75vw;
   max-height: 75vh;
+  border: 1px solid red;
+  margin: 0 auto;
+  padding: 0;
+  color: #e5e5e5;
 }
+
