--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -8,5 +8,8 @@
 @import url("./__container/_type_image/form__container_type_image.css");
 
 .form {
-    display: none;
+    /*display: none;*/
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 1s, opacity 1s linear;
 }
