fix css issues in code review

--- a/blocks/form/__description/form__description.css
+++ b/blocks/form/__description/form__description.css
@@ -1,8 +1,13 @@
 .form__description {
+    font-family: 'Inter', "Arial", sans-serif;
     margin-top: 30px;
     margin-left: 36px;
     margin-right: 36px;
     border: none;
     border-bottom: 1px solid black;
-
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 17px;
+    color: #C4C4C4;
 }
