--- a/blocks/form/__container/_type/form__container_type_image.css
+++ b/blocks/form/__container/_type/form__container_type_image.css
@@ -1,15 +1,12 @@
 .form__container_type_image {
+  font-family: 'Inter', 'Arial', sans-serif;
   display: flex;
   position: fixed;
   border-radius: 0;
   object-fit: contain;
   background-color: transparent;
-  left: 50%;
   top: 10%;
-  transform: translate(-50%, 0);
-  border: 1px solid red;
   margin: auto;
   padding: 0;
-  color: #e5e5e5;
-
+  color: #ffffff;
 }
