--- a/blocks/form/__title/form__title.css
+++ b/blocks/form/__title/form__title.css
@@ -1,8 +1,11 @@
 .form__title {
+    font-family: 'Inter', "Arial", sans-serif;
     margin-top: 34px;
     margin-left: 36px;
     margin-bottom: 0;
+    font-style: normal;
     font-weight: 900;
     font-size: 24px;
     line-height: 29px;
+    color: #000000;
 }
