--- a/blocks/elements/__element/elements__element.css
+++ b/blocks/elements/__element/elements__element.css
@@ -1,10 +1,12 @@
 .elements__element {
+    position: relative;
     background-color: white;
     border-radius: 10px;
     object-fit: contain;
     width: 282px;
     color: black;
     box-sizing: border-box;
+    list-style-type: none;
   
 }
 
