fix forms mobile layout

--- a/blocks/form/__close-button/form__close-button.css
+++ b/blocks/form/__close-button/form__close-button.css
@@ -10,3 +10,13 @@
     background-position: center;
     border: none;
 }
+
+
+@media screen and (max-width: 500px) {
+
+    .form__close-button {
+        top: 121px;
+        right:calc(50vw - 160px) ;
+    }
+}
+
