--- a/blocks/form/__container/form__container.css
+++ b/blocks/form/__container/form__container.css
@@ -13,3 +13,12 @@
     opacity: 1;
     z-index: 2;
 }
+
+@media screen and (max-width: 500px) {
+    .form__container {
+        width: 240px;
+height: 258px;
+right: calc(50% - 120px);
+top: 155px;
+    }
+}
