--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -5,10 +5,11 @@
     font-weight: 500;
     padding: 0; 
     font-size: 42px;
-    line-height: 56px;
-    text-overflow: clip;  
+    line-height: 56px;  
     max-width: 380px; 
     white-space: nowrap;
+  overflow: hidden;
+text-overflow: ellipsis;
 }
 
 @media screen and (max-width: 710px) {
@@ -29,6 +30,7 @@
         line-height: 56px;
         text-align: center;
         max-width: 280px;
+        overflow: visible;
     }
 }
 
