fix layout for mobile even more

--- a/pages/index.css
+++ b/pages/index.css
@@ -9,4 +9,5 @@
 @import url("../blocks/form/form.css");
 @import url("../blocks/hover/hover.css");
 @import url("../blocks/big-image/big-image.css");
+@import url("../blocks/form/__overlay/_type/form__overlay_type_dark.css");
 
