fix hover name and opacity

--- a/pages/index.css
+++ b/pages/index.css
@@ -10,4 +10,5 @@
 @import url("../blocks/hover/hover.css");
 @import url("../blocks/big-image/big-image.css");
 @import url("../blocks/form/__overlay/_type/form__overlay_type_dark.css");
+@import url("../blocks/hover/_type/hover_type_dark.css");
 
