fix card images

--- a/blocks/elements/__image/elements__image.css
+++ b/blocks/elements/__image/elements__image.css
@@ -5,5 +5,7 @@
     max-height: 282px;
     object-fit: contain;
     border-radius: 10px 10px 0 0;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
