--- a/blocks/form/__save-button/form__save-button.css
+++ b/blocks/form/__save-button/form__save-button.css
@@ -6,7 +6,8 @@
     background-color: black;
     color: white;
     width: 358px;
-    height: 50px;
+    padding-top: 14px;
+    padding-bottom: 18px;
     border-radius: 2px;
     border: none;
 }
@@ -14,8 +15,8 @@
 @media screen and (max-width: 500px) {
     .form__save-button {
         width: 200px;
-        height: 40px;
+        padding-top: 12px;
+        padding-bottom: 14px;
         margin: 36px 20px 27px 20px;
-        padding: 0;
     }
 }
