--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -14,6 +14,6 @@
   visibility: hidden;
   opacity: 0;
   transition: visibility 1s, opacity 1s linear;
-  pointer-events: all;
+  pointer-events: none;
   transition-delay: 0s;
 }
