--- a/pages/index.css
+++ b/pages/index.css
@@ -9,6 +9,7 @@
 @import url("../blocks/form/form.css");
 @import url("../blocks/hover/hover.css");
 @import url("../blocks/big-image/big-image.css");
+@import url("../blocks/big-image/__caption/big-image__caption.css");
 @import url("../blocks/form/__overlay/_type/form__overlay_type_dark.css");
 @import url("../blocks/hover/_type/hover_type_dark.css");
 
