--- a/blocks/form/_is-opened/form_is-opened.css
+++ b/blocks/form/_is-opened/form_is-opened.css
@@ -1,4 +1,7 @@
 .form_is-opened {
-    opacity: 1;
-    transition: visibility 1s, opacity 1s linear;
+  visibility: visible;
+  opacity: 1;
+  transition: visibility 1s, opacity 1s linear;
+  pointer-events: all;
+  transition-delay: 0s;
 }
