--- a/blocks/form/__name/form__name.css
+++ b/blocks/form/__name/form__name.css
@@ -9,6 +9,7 @@
     font-weight: normal;
     font-size: 14px;
     line-height: 17px;
+    padding-bottom: 13.26px;
     color: #C4C4C4;
 }
 
@@ -21,5 +22,6 @@
         font-size: 12px;
         line-height: 15px;
         padding: 0;
+        padding-bottom: 12px;
     }
 }
