--- a/pages/index.css
+++ b/pages/index.css
@@ -12,4 +12,5 @@
 @import url("../blocks/big-image/__caption/big-image__caption.css");
 @import url("../blocks/form/__overlay/_type/form__overlay_type_dark.css");
 @import url("../blocks/hover/_type/hover_type_dark.css");
+@import url("../blocks/form/_is-opened/form_is-opened.css");
 
