code validator function - have good error messages to work from

--- a/blocks/form/__description/form__description.css
+++ b/blocks/form/__description/form__description.css
@@ -17,6 +17,13 @@
   color: black;
 }
 
+.form__description:invalid {
+  border-bottom: 1px solid red;
+}
+
+.form__description:valid {
+  border-bottom: 1px solid black;
+}
 
 @media screen and (max-width: 500px) {
 
