--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -7,6 +7,10 @@
 @import url("./__overlay/form__overlay.css");
 @import url("./__container/_type/form__container_type_image.css");
 @import url("./__close-button/_type/form__close-button_type_image.css");
+@import url("./__input/form__input.css");
+@import url("./__input/_type/form__input_type_error.css");
+@import url("./__input-error/form__input-error.css");
+@import url("./__input-error/_active/form__input-error_active.css");
 
 .form {
   visibility: hidden;
