--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -11,6 +11,7 @@
 @import url("./__input/_type/form__input_type_error.css");
 @import url("./__input-error/form__input-error.css");
 @import url("./__input-error/_active/form__input-error_active.css");
+@import url("./__save-button/_type/form__save-button_type_inactive.css");
 
 .form {
   visibility: hidden;
